@@ -1,3 +1,6 @@
+2012-03-01 Stanislas Rolland  <typo3@sjbr.ca>
+	* Follow-up to feature #34405: Fix CGL in tx_srfeuserregister_email (Thanks to Franz Holzinger)
+
 2012-02-28 Stanislas Rolland  <typo3@sjbr.ca>
 	* Add feature #34405: Make use of Swift Mailer API
 
